[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["Thoralf Müller <thoralf.mueller@iota.org", "Antony Dikov <antoni.dikov@iota.org>", "Bing-Yang Lin <bingyang.lin@iota.org>", "Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"
description = "Core library of IOTA"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://iota.org"

[lib]
name = "iota"

[dependencies]
iota-client = { version = "0.5.0-alpha", path = "../iota-client", default-features = false }

[features]
default = ["iota-client/async"]
sync = ["iota-client/sync"]
async = ["iota-client/async"]
mqtt = ["iota-client/mqtt"]
storage = ["iota-client/storage"]
