[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "Apache-2.0"

[lib]
name = "iota"

[dependencies]
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "5955b30e01f3b9bf742a5e967c0e08bf5244fd75" }
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }
iota-crypto = { git = "https://github.com/thibault-martinez/crypto.rs", branch = "wots", features = ["ed25519", "random", "kerl_deprecated_do_not_use", "wots_deprecated_do_not_use" ] }
iota-client = { version = "0.5.0-alpha", path = "../iota-client" }
iota-bundle-miner = { version = "0.1.0-alpha.0", path = "../iota-bundle-miner"}