[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "Apache-2.0"

[lib]
name = "iota"

[dependencies]
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "cf47287dbb37861668d378ea3ae3b8c0f2852566" }
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }
iota-crypto = { version = "0.5.0", features = ["ed25519", "random", "wots_deprecated_do_not_use", "kerl_deprecated_do_not_use"] }
iota-client = { version = "0.5.0-alpha", path = "../iota-client" }
iota-bundle-miner = { version = "0.1.0-alpha.0", path = "../iota-bundle-miner"}