[package]
name = "iota-crypto"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"
description = "Crypto used by Iota"
license = "MIT"

[lib]
name = "iota_crypto"
path = "lib.rs"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1"
crunchy = "0.2"
iota-conversion = { version = "0.1.0", path = "../iota-conversion" }
iota-constants = { version = "0.1.0", path = "../iota-constants" }

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "kerl_benchmark"
harness = false