[package]
name = "iota-crypto"
version = "0.3.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Crypto used by Iota"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-crypto"
license = "MIT"

[lib]
name = "iota_crypto"
path = "lib.rs"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1"
crunchy = "0.2"
iota-constants = { version = "0.2.1", path = "../iota-constants" }
iota-conversion = { version = "0.3.0", path = "../iota-conversion" }

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "kerl_benchmark"
harness = false