[package]
name = "iota-model"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"

[lib]
name = "iota_model"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
iota-conversion = { version = "0.1.0", path = "../iota-conversion" }
iota-curl = { version = "0.1.0", path = "../iota-curl" }