[package]
name = "iota-model"
version = "0.2.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"
description = "Data model used by Iota"
license = "MIT"

[lib]
name = "iota_model"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
iota-crypto = { version = "0.2.0", path = "../iota-crypto" }
iota-constants = { version = "0.2.0", path = "../iota-constants" }
iota-conversion = { version = "0.2.0", path = "../iota-conversion" }
lazy_static = "1.3"