[package]
name = "iota-pow"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"
description = "Proof of work used by Iota"
license = "MIT"

[lib]
name = "iota_pow"
path = "lib.rs"

[dependencies]
num_cpus = "1.10"
crossbeam = "0.7"
failure = "0.1"
iota-conversion = { version = "0.1.0", path = "../iota-conversion" }
iota-model = { version = "0.1.0", path = "../iota-model" }
iota-crypto = { version = "0.1.0", path = "../iota-crypto" }
lazy_static = "1.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "pow_benchmark"
harness = false