[package]
name = "iota-pow"
version = "0.2.1"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Proof of work used by Iota"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-pow"
license = "MIT"

[lib]
name = "iota_pow"
path = "lib.rs"

[dependencies]
num_cpus = "1.10"
crossbeam = "0.7"
failure = "0.1"
iota-conversion = { version = "0.3.0", path = "../iota-conversion" }
iota-crypto = { version = "0.3.0", path = "../iota-crypto" }
lazy_static = "1.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "pow_benchmark"
harness = false