[package]
name = "iota-signing"
version = "0.4.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Signing helpers used by Iota"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-pow"
license = "MIT"

[lib]
name = "iota_signing"
path = "lib.rs"

[dependencies]
iota-constants = { version = "0.4.0", path = "../iota-constants" }
iota-model = { version = "0.4.0", path = "../iota-model" }
iota-crypto = { version = "0.4.0", path = "../iota-crypto" }
iota-validation = { version = "0.4.0", path = "../iota-validation" }
iota-conversion = { version = "0.4.0", path = "../iota-conversion" }
failure = "0.1"