[package]
name = "iota-utils"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"

[lib]
name = "iota_utils"
path = "lib.rs"

[dependencies]
rand = "0.6"
iota-conversion = { version = "0.1.0", path = "../iota-conversion"}
iota-curl = { version = "0.1.0", path = "../iota-curl"}
iota-model = { version = "0.1.0", path = "../iota-model"}
iota-constants = { version = "0.1.0", path = "../iota-constants" }
iota-validation = { version = "0.1.0", path = "../iota-validation" }
lazy_static = "1.3"
regex = "1.1"
failure = "0.1"