[package]
name = "iota-validation"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"
description = "Validators used by Iota"
license = "MIT"

[lib]
name = "iota_validation"
path = "lib.rs"

[dependencies]
iota-model = { version = "0.1.0", path = "../iota-model" }
iota-crypto = { version = "0.1.0", path = "../iota-crypto" }
iota-conversion = { version = "0.1.0", path = "../iota-conversion" }
iota-constants = { version = "0.1.0", path = "../iota-constants" }
lazy_static = "1.3"
regex = "1.1"
failure = "0.1"