[package]
name = "iota-pow"
version = "1.0.0-rc.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Provides Proof of Work utilities for the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client", "pow" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
iota-crypto = { version = "0.15.2", default-features = false, features = [ "blake2b", "digest", "curl-p", "ternary_encoding" ] }
thiserror = { version = "1.0.37", default-features = false }

[dev-dependencies]
iota-types = { path = "../types", default-features = false, features = [ "rand", "block" ] }
