[package]
name = "iota-pow"
version = "1.0.0-rc.4"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Provides proof of work implementations and scoring for the IOTA protocol"
readme = "README.md"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client", "pow" ]
homepage = "https://www.iota.org"

[package.metadata.docs.rs]
# To build locally: `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open`
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
iota-crypto = { version = "0.15.3", default-features = false, features = [ "blake2b", "digest", "curl-p", "ternary_encoding" ] }
num_cpus = { version = "1.15.0", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
instant = { version = "0.1.12", default-features = false, features = [ "wasm-bindgen" ] }

[dev-dependencies]
iota-types = { path = "../types", default-features = false, features = [ "rand", "block" ] }
