[package]
name = "iota-types"
version = "1.0.0-rc.7"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Common types required by nodes and clients APIs like blocks, responses and DTOs."
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client", "types", "api" ]
categories = [ "cryptography::cryptocurrencies" ]

[package.metadata.docs.rs]
# To build locally: `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open`
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
bech32 = { version = "0.9.1", default-features = false }
bitflags = { version = "1.3.2", default-features = false }
bytemuck = { version = "1.13.1", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
getset = { version = "0.1.2", default-features = false, optional = true }
hashbrown = { version = "0.13.2", default-features = false, features = [ "ahash", "inline-more", "serde" ] }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
iota-crypto = { version = "0.15.3", default-features = false, features = [ "ed25519", "blake2b", "ternary_encoding" ] }
iterator-sorted = { version = "0.1.0", default-features = false }
packable = { version = "0.7.0", default-features = false, features = [ "serde", "primitive-types" ] }
prefix-hex = { version = "0.6.0", default-features = false, features = [ "primitive-types" ] }
primitive-types = { version = "0.12.1", default-features = false, features = [ "serde" ] }
rand = { version = "0.8.5", default-features = false, features = [ "min_const_gen", "std_rng" ], optional = true }
serde = { version = "1.0.152", default-features = false, features = [ "derive" ], optional = true }
serde-big-array = { version = "0.5.1", default-features = false, optional = true }
serde_json = { version = "1.0.94", default-features = false, features = [ "alloc" ], optional = true }
serde_repr = { version = "0.1.11", default-features = false, optional = true }

[dev-dependencies]
iota-pow = { version = "1.0.0-rc.4", path = "../pow", default-features = false }
num_cpus = { version = "1.15.0", default-features = false }

[features]
default = [ "api", "block", "std" ]

api = [ "block", "dto", "getset", "serde_repr" ]
block = [  ]
dto = [ "serde", "dep:serde_json" ]
rand = [ "dep:rand", "std" ]
serde = [ "dep:serde", "serde-big-array" ]
std = [  ]