[package]
name = "iota-shared"
version = "0.1.0-alpha.1"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Static library of IOTA that compatible to C"
license = "MIT"

[lib]
name = "iota"
crate-type = ["cdylib"]

[dependencies]
iota-core = { version = "0.2.0-alpha.1", path = "../../iota-core" }
smol = {version = "0.1.7", features = ["tokio02"] }
anyhow = "1.0.31"

#tmp
iota-conversion = "0.5.0"