[package]
name = "iota_client"
version = "0.2.0"
description = "Node.js binding to the iota library"
authors = ["Antoni Dikov <antoni.dikov@iota.org>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "event-queue-api"]

[dependencies]
iota-client = { path = "../../iota-client", features = ["mqtt"] }
serde_json = "1.0"
serde = "1.0"
once_cell = "1.4"
rand = "0.8"
futures = "0.3"
backtrace = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tokio = "1.1"
hex = "0.4"
