[package]
name = "iota-wasm"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
iota-core = { path = "../../iota-core", features = ["wasm"] }
iota-bundle-preview = "0.1"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", rev = "7c38546" }
