[package]
name = "iota-core-python"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://iota.org"

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[dependencies]
bee-message = { git = "https://github.com/Alex6323/bee-p.git", branch = "chrysalis-pt-2" }
bee-signing-ext = { git = "https://github.com/wusyong/bee-p.git", branch = "sign-ext" }
iota-client = { version = "0.5.0-alpha", path = "../../../iota-client" }
tokio = { version = "0.2.22", features = ["macros"] }
hex = "0.4.2"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]