[package]
name = "iota-client-java"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Java bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client", "java"]
categories = ["cryptography::cryptocurrencies"]
build = "build.rs"

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[dependencies]
iota-client = { path = "../../..", features = ["mqtt"] }

# Java gen
jni = "0.19.0"
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", rev = "6a5e38b02781b47b955b88e88f70b10195b563d2" }

log = { version = "0.4.14", default-features = false }
env_logger = "0.9.0"
anyhow = "1.0.53"
hex = { version = "0.4.3", default-features = false }
getset = "0.1.2"

# Needed for prepared transaction data serialization
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.78", default-features = false }

# await block_on etc management
tokio = { version = "1.16.1", default-features = false, features = ["macros"] }
once_cell = { version = "1.9.0", default-features = false }
futures = { version = "0.3.19", default-features = false }

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", rev = "6a5e38b02781b47b955b88e88f70b10195b563d2" }
env_logger = "0.9.0"
bindgen = "0.59.2"

[features]
default = ["mqtt", "iota-client/default"]
mqtt = ["iota-client/mqtt"]
wasm = ["iota-client/wasm"]
