[package]
name = "iota-client-java"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Java bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client", "java"]
categories = ["cryptography::cryptocurrencies"]
build = "build.rs"

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[dependencies]
iota-client = { path = "../../..", features = ["mqtt"] }

# Generating bindings
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", default-features = false }
getset = { version = "0.1.1", default-features = false }
jni = { version = "0.19", default-features = false }

log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
anyhow = { version = "1.0.38", default-features = false }
hex = { version = "0.4.3", default-features = false }

# Needed for prepared transaction data serialization
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.78", default-features = false }

# await block_on etc management
tokio = { version = "1.25.0", default-features = false, features = ["macros"] }
once_cell = { version = "1.9.0", default-features = false }
futures = { version = "0.3.19", default-features = false }

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
walkdir = { version = "2.2.7", default-features = false }
cc = { version = "1.0.67", default-features = false }
bindgen = { version = "0.60.1", default-features = false, features = ["runtime"] }

[features]
default = ["mqtt", "iota-client/default"]
sync = ["iota-client/sync"]
async = ["iota-client/async"]
mqtt = ["iota-client/mqtt"]
storage = ["iota-client/storage"]
wasm = ["iota-client/wasm"]
