[workspace]

[package]
name = "iota-client"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5"

[dependencies]
neon = "0.5"
iota-core = { path = "../../../iota-core", features = ["mqtt"] }
serde_json = "1.0"
serde = "1.0"
once_cell = "1.4"
rand = "0.7"
futures = "0.3"
backtrace = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tokio = "1.1"
bech32 = "0.7"
hex = "0.4"
