[workspace]

[package]
name = "iota-client"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5"

[dependencies]
neon = "0.8"
iota-client = { path = "../../..", features = ["mqtt", "pow-fallback"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
once_cell = { version = "1.8.0", default-features = false }
rand = "0.7.3"
futures = { version = "0.3.17", default-features = false }
backtrace = "0.3.62"
anyhow = "1.0.44"
thiserror = { version = "1.0.29", default-features = false }
tokio = { version = "1.12.0", features = ["macros"] }
hex = { version = "0.4.3", default-features = false }
