[package]
name = "iota-client-python"
version = "0.2.0-alpha.3"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Python bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client", "python" ]
categories = [ "cryptography::cryptocurrencies" ]

[lib]
name = "iota_client"
crate-type = [ "cdylib" ]

[dependencies]
iota-client = { path = "../../../", default-features = false, features = [ "message_interface" ] }

futures = { version = "0.3.21", default-features = false }
once_cell = { version = "1.12.0", default-features = false, features = [ "std" ] }
pyo3 = { version = "0.16.5", default-features = false, features = [ "macros", "extension-module" ] }
serde_json = { version = "1.0.81", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [ "macros" ] }
