[package]
name = "iota-client-python"
version = "0.2.0-alpha.3"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Python bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client", "python"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.25.0", default-features = false, features = ["macros"] }
hex = { version = "0.4.3", default-features = false }
iota-client = { path = "../../..", features = ["mqtt"] }
dict_derive = "0.3.0"
serde_json = { version = "1.0.68", default-features = false }
once_cell = { version = "1.8.0", default-features = false, features = ["std"] }
futures = { version = "0.3.17", default-features = false }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "abi3-py36"]
