[package]
name = "client-wasm"
version = "0.0.1"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Web Assembly bindings for the iota-client crate."
readme = "README.md"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "wasm"]
homepage = "https://www.iota.org"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
futures = { version = "0.3" }
js-sys = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false }
hex = "0.4"
iota-client = { path = "../../../iota-client", features = ["wasm", "pow-fallback"], default-features = false }
web-sys = {version = "0.3.52", features = ["console"] }

# import needed for the wasm-bindgen feature
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
