[workspace]

[package]
name = "client-wasm"
version = "0.0.1"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Web Assembly bindings for the iota-client crate."
readme = "README.md"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "wasm"]
homepage = "https://www.iota.org"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.17"
js-sys = "0.3.55"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.28", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-client = { path = "../../..", features = ["wasm", "pow-fallback"], default-features = false }

# import needed for the wasm-bindgen feature
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 's'
