[package]
# NOTE: cargo-cp-artifact reads the name of crate for artifacts, so this stays
# the same as the one specified in `../package.json`.
name = "client-wasm"
version = "0.0.1"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "WebAssembly bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client", "wasm"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.91", default-features = false }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.33", default-features = false }
hex = { version = "0.4.3", default-features = false }
iota-client = { path = "../../..", features = ["wasm", "tls"], default-features = false }

# import needed for the wasm-bindgen feature
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 's'
