[workspace]

[package]
# NOTE: cargo-cp-artifact reads the name of crate for artifacts, so this stays
# the same as the one specified in `../package.json`.
name = "client"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Node.js bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "client", "nodejs" ]
categories = [ "cryptography::cryptocurrencies" ]
exclude = [ "artifacts.json", "index.node" ]

[lib]
crate-type = [ "cdylib" ]

[dependencies]
iota-client = { path = "../../", default-features = false, features = [ "ledger_nano", "message_interface", "mqtt", "stronghold", "tls" ] }

backtrace = { version = "0.3.66", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }
futures = { version = "0.3.25", default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.17", default-features = false }
neon = { version =  "0.10.1", default-features = false, features = [ "napi-6", "event-queue-api" ] }
once_cell = { version = "1.16.0", default-features = false, features = [ "std" ] }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.147", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.87", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.22.0", default-features = false, features = [ "macros" ] }