[package]
name = "iota-client-java"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Java bindings for the IOTA client library"
documentation = "https://wiki.iota.org/iota.rs/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "client", "java"]

[lib]
name = "iota_client"
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.21", default-features = false }
iota-client = { path = "../../../..", features = ["message_interface"] }
jni = "0.19.0"
serde_json = { version = "1.0.81", default-features = false }
tokio = { version = "1.18.2", default-features = false, features = ["macros"] }
once_cell = { version = "1.10.0", default-features = false }
